test/expected/explain_f_ai.out
explain int f()[]
            ^
13: error: function returning array; did you mean function returning pointer?
